--- a/index.html
+++ b/index.html
@@ -30,13 +30,29 @@
             Shot what able cold new see hold.Friendly as an betrayed formerly
             he. Morning because as to society behaved moments.
           </p>
-          <button class="btn-primary">Download CV</button>
-          <button class="btn-primary">Contact</button>
+          <button id="download-btn" class="btn-primary">Download CV</button>
+          <button id="contact-btn">
+            <div class="button-content">
+              <img class="svg" src="images/Frame.svg" alt="" />
+              <span>Contact</span>
+            </div>
+          </button>
         </div>
         <img src="images/hardy.png" alt="" class="profile-pic" />
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="about">
+        <h3 class="section-title">About Me</h3>
+        <p class="section-paragraph">
+          I, m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and slick websites that provide real value to
+          the end user. Thousands of clients have procured exceptional resulfs
+          while working with me. Delivering work within time and budget which
+          meets clients requirements in our mata.
+        </p>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
