added half main section

--- a/index.html
+++ b/index.html
@@ -51,6 +51,24 @@
           while working with me. Delivering work within time and budget which
           meets clients requirements in our mata.
         </p>
+        <div class="about-container">
+          <div class="about-info">
+            <h2 class="title-info">Name:</h2>
+            <p class="paragraph-info">Mary Hardy</p>
+          </div>
+          <div class="about-info">
+            <h2 class="title-info">Email:</h2>
+            <p class="paragraph-info">info@gmail.com</p>
+          </div>
+          <div class="about-info">
+            <h2 class="title-info">Date of birth:</h2>
+            <p class="paragraph-info">11 November 1987</p>
+          </div>
+          <div class="about-info">
+            <h2 class="title-info">From:</h2>
+            <p class="paragraph-info">Los Angeles, USA</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer></footer>
